--- a/08/index.html
+++ b/08/index.html
@@ -104,7 +104,7 @@
                 </li>
             </ul>
 
-            <span class="negritados">Soluciones:</span>
+            <h1 class="negritados">Soluciones:</h1>
 
             <ul>
                 <li>
@@ -138,7 +138,7 @@
                 través de la app.</p>
 
 
-            <span class="negritados">Amenazas:</span>
+            <h1 class="negritados">Amenazas:</h1>
 
             <ul>
                 <li>
@@ -160,7 +160,7 @@
 
             </ul>
 
-            <span class="negritados">Soluciones:</span>
+            <h1 class="negritados">Soluciones:</h1>
 
             <ul>
 
@@ -192,7 +192,7 @@
                 accedieron desde sus ordenadores a un <span class="negrita"><u>Jeep Cherokee</u></span>. Consiguieron
                 manipular el aire acondicionado, la radio, el limpiaparabrisas y hasta detener el motor del vehículo.
             </p>
-            <span class="negritados">Amenazas:</span>
+            <h1 class="negritados">Amenazas:</h1>
 
             <ul>
 
@@ -213,7 +213,7 @@
                     otros dispositivos y trastocar el normal funcionamiento del vehículo.
                 </li>
 
-                <span class="negritados">Soluciones:</span>
+                <h1 class="negritados">Soluciones:</h1>
 
                 <ul>
                     <li>
@@ -252,7 +252,7 @@
                 información y por el tiempo de inactividad del sistema.
             </p>
 
-            <span class="negritados">Amenazas:</span>
+            <h1 class="negritados">Amenazas:</h1>
 
             <ul>
 
@@ -275,7 +275,7 @@
             </ul>
 
 
-            <span class="negritados">Soluciones:</span>
+            <h1 class="negritados">Soluciones:</h1>
 
             <ul>
 
@@ -312,7 +312,7 @@
                 determinaron que todo partió de un hackeo informático contra la red inteligente de la localidad.
             </p>
 
-            <span class="negritados">Amenazas:</span>
+            <h1 class="negritados">Amenazas:</h1>
 
             <ul>
                 <li>
@@ -336,7 +336,7 @@
 
             </ul>
 
-            <span class="negritados">Soluciones:</span>
+            <h1 class="negritados">Soluciones:</h1>
 
             <ul>
                 <li>
