--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         Técnicas de Producción y Edición Digital I
     </h1>
 
-    <a href="08/index.html">Sesión 8. El País</a>
+    <a href="08/index.html">Sesión 8. El País</a> <br>
+    <a href="09/index.html">Sesión 9. Galería de imágenes</a>
 </body>
 </html>
