--- a/09/index.html
+++ b/09/index.html
@@ -24,8 +24,8 @@
         <a href="imagenes/img2.jpg" target="_blank">
             <img class="img2" alt="Imagen 2" src="imagenes/img2_peq.jpg" title="Imagen 2">
         </a>
-        <a href="imagenes/img3.jpg" target="_blank">
-            <img class="img3" alt="Imagen 3" src="imagenes/img3_peq.jpg" title="Lluvia 3">
+        <a href="imagenes/img3.gif" target="_blank">
+            <img class="img3" alt="Imagen 3" src="imagenes/img3_peq.gif" title="Lluvia 3">
         </a>
     </section>
 
@@ -33,8 +33,8 @@
         <a href="imagenes/img4.svg" target="_blank">
             <img class="img4" alt="Imagen 4" src="imagenes/img4.svg" title="Imagen 4">
         </a>
-        <a href="imagenes/img5.gif" target="_blank">
-            <img class="img5" alt="Imagen 5" src="imagenes/img5.gif" title="Imagen 5">
+        <a href="imagenes/img5.jpg" target="_blank">
+            <img class="img5" alt="Imagen 5" src="imagenes/img5.jpg" title="Imagen 5">
         </a>
         <a href="imagenes/img6.jpg" target="_blank">
             <img class="img6" alt="Imagen 6" src="imagenes/img6.jpg" title="Imagen 6">
@@ -48,6 +48,11 @@
         <a href="imagenes/img8.png" target="_blank">
             <img class="img8" alt="Imagen 8" src="imagenes/img8.png" title="Imagen 8">
         </a>
+
+        <div class="titulo">
+            <h2>Brosmind</h2>
+        </div>
+        
         <a href="imagenes/img9.gif" target="_blank">
             <img class="img9" alt="Imagen 9" src="imagenes/img9.gif" title="Imagen 9">
         </a>
