--- a/index.html
+++ b/index.html
@@ -4,12 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos.css">
+    <link href="https://fonts.cdnfonts.com/css/common-pixel" rel="stylesheet">
     <title>Jorge</title>
 </head>
+
 <body>
-    <h1>
-        Técnicas de Producción y Edición Digital I
-    </h1>
+    <section class="fondo1">
+
+        <div class="titulo">
+            <h2>
+                Tecnicas de Produccion y Edicion Digital I
+            </h2>
+        </div>
+
+        <img src="imagenes/fondogithub.jpg" alt="fondo1" class="fondo1">
+
+    </section>
+
 
     <a href="08/index.html">Sesión 8. El País</a> <br>
     <a href="09/index.html">Sesión 9. Galería de imágenes</a>
