--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </section>
 
 
-    <a href="08/index.html">Sesión 8. El País</a> <br>
-    <a href="09/index.html">Sesión 9. Galería de imágenes</a>
+    <a href="09/index.html"><h1>Sesión 8. El País</h1></a> <br>
+    <a href="11/index.html"><h1>Sesión 11. Galería de imágenes</h1></a>
 </body>
 </html>
