--- a/ejercicios.html
+++ b/ejercicios.html
@@ -11,13 +11,13 @@
 
 <body>
 	<header class="header">
-		<a href="main.html" class="logo">Artist View</a>
+		<a href="index.html" class="logo">Artist View</a>
 		<input type="checkbox" id="side-menu" class="side-menu" />
 		<label for="side-menu" class="hamb"><span class="hamb-line"></span></label>
 
 		<nav class="nav">
 			<ul class="menu">
-				<li><a href="main.html">Inicio</a></li>
+				<li><a href="index.html">Inicio</a></li>
 				<li><a href="explore.html">Explorar</a></li>
 				<li><a href="contacto.html">Contacto</a></li>
 				<li><a class="unabled" href="#">Ejercicios</a></li>
