--- a/ejercicios.html
+++ b/ejercicios.html
@@ -33,7 +33,7 @@
 			<h1>Ejercicios TPED 1</h1>
 
 			<h2>
-				<a href="11/index.html">Galería de imágenes</a>
+				<a href="11/index.html">Galería de imágenes final</a>
 			</h2>
 
 			<h2>
@@ -41,15 +41,15 @@
 			</h2>
 
 			<h2>
-				<a href=""></a>
+				<a href="10/index.html">Primera galería</a>
 			</h2>
 
 			<h2>
-				<a href=""></a>
+				<a href="09/index.html">Hackers, El País</a>
 			</h2>
 
 			<h2>
-				<a href=""></a>
+				<a href="07/index.html">Nike Digital</a>
 			</h2>
 
 		</article>
